# llama-pc

./: .gitignore  README.md  pyproject.toml  requirements.txt
deploy/: Dockerfile
docs/: guideline.md
llama_pc/: run.py  server.py
